Add client for BankService to PaymentGateway
